--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,51 @@
+@import "tailwindcss";
 
+#root {
+    margin: 3%;
+}
+
+
+/* Typescale Values */
+h1 {
+    font-size: 2.986rem ;
+}
+h2 {
+    font-size: 2.488rem ; 
+}
+h3 {
+    font-size: 2.074rem ;
+}
+h4 {
+    font-size: 1.728rem ; 
+}
+h5 {
+    font-size: 1.44rem ; 
+}
+h6 {
+    font-size: 1.2rem ; 
+}
+p {
+    font-size: 1rem ;
+}
+small {
+    font-size: 0.833rem ;
+}
+.tiny {
+    font-size: 0.694rem ;
+} 
+
+
+
+/* Navbar Styles */
+.nav-container {
+    align-items: center;
+}
+
+.nav-container h5 {
+    font-family: "Playfair Display", serif;
+    font-weight: 800;
+}
+
+.nav-options {
+    font-family: "Figtree", sans-serif;
+}
