--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 #root {
-    margin: 3%;
+    margin: 2%;
 }
 
 
@@ -42,7 +42,7 @@ small {
 }
 
 .nav-container h5 {
-    font-family: "Playfair Display", serif;
+    font-family: "Caudex", serif;
     font-weight: 800;
 }
 
