--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+:root {
+    --red: #B91327;
+    --gold: #FF9F1C;
+    --green: #43604E;
+    --platinum: #F5F5F5;
+    --black: #262626;
+    --grey: #D6D6D6;
+}
+
 #root {
     margin: 2%;
 }
@@ -36,7 +45,9 @@ small {
 
 
 
+/* ------------- */
 /* Navbar Styles */
+/* ------------- */
 .nav-container {
     align-items: center;
 }
@@ -49,3 +60,46 @@ small {
 .nav-options {
     font-family: "Figtree", sans-serif;
 }
+
+
+/* ------------- */
+/* Signup Styles */
+/* ------------- */
+.signup {
+    /* border: 1px solid red; */
+    margin-left: 8rem;
+    margin-right: 8rem;
+    padding-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    /* align-items: center; */
+}
+
+.signup h3 {
+    font-family: "Caudex", serif;
+    font-weight: 700;
+}
+.signup-username input {
+    border: 1px solid var(--grey);
+    margin-bottom: 1rem;
+    height: 2rem;
+    border-radius: 5px;
+}
+
+.signup-password input {
+    border: 1px solid var(--grey);
+    margin-bottom: 1rem;
+    height: 2rem;
+    border-radius: 5px;
+}
+
+.signup-button-div button {
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    background-color: var(--red);
+    color: var(--platinum);
+    border-radius: 5px;
+}
+
