styled home page cards and added single character page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,6 +66,9 @@ button {
 }
 
 
+
+
+
 /* ------------- */
 /* Signup Styles */
 /* ------------- */
@@ -121,3 +124,18 @@ button {
     color: #ff443a ;
 }
 
+
+
+
+/* ------------- */
+/* Sheet Card Styles */
+/* ------------- */
+.sheet-card {
+    border: 1px solid var(--grey);
+    border-radius: 5px;
+    max-width: 25%;
+}
+
+.sheet-card-options {
+    border-top: 1px solid var(--grey);
+}
